2012-07-17  Andreas Schwab  <schwab@linux-m68k.org>

	* shr.el (shr-expand-url): Handle URL starting with `//'.

2012-07-13  Chong Yidong  <cyd@gnu.org>

	* smime.el (smime-certificate-info): Set buffer-read-only directly,
	instead of calling toggle-read-only with a (bogus) argument.

2012-07-09  Tassilo Horn  <tassilo@member.fsf.org>

	* gnus-sum.el (gnus-summary-limit-to-author): Use default value instead
	of initial input when reading the author to restrict the summary to.

2012-07-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el (mm-shr):
	Allow overriding charset by mm-charset-override-alist.

2012-07-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-view-part):
	Toggle subparts of multipart/alternative part.

2012-06-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* shr.el (shr-render-buffer): New command.
	(shr-visit-file): Use it.

2012-06-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* tests/gnustest-nntp.el, tests/gnustest-registry.el:
	Set no-byte-compile and no-update-autoloads.

2012-06-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el: Add coding cookie for a soft hyphen that mm-shr uses.

2012-06-25  Julien Danjou  <julien@danjou.info>

	* nnimap.el (nnimap-request-articles-find-limit): Rename from
	`nnimap-request-move-articles-find-limit' since we do not use it only
	for move operations.
	(nnimap-request-accept-article): Use
	`nnimap-request-articles-find-limit' to limit search by message-id.

2012-06-22  Paul Eggert  <eggert@cs.ucla.edu>

	Support higher-resolution time stamps (Bug#9000).

	* time-date.el (with-decoded-time-value): New arg PICO-SYMBOL in
	VARLIST.  It's optional, for backward compatibility.
	(encode-time-value): New optional arg PICO.  New type 3.
	(time-to-seconds) [!float-time]: Support the new picoseconds
	component if it's used.
	(seconds-to-time, time-subtract, time-add):
	Support ps-resolution time stamps as well.

2012-06-19  Julien Danjou  <julien@danjou.info>
